# symbolic-math.rs

./: Cargo.toml  README.md
src/: lib.rs
src/ops/: add.rs  mod.rs
src/terms/: canonical.rs  expression.rs  func.rs  funcs.rs  mod.rs  number.rs  op.rs  ops.rs  symbol.rs
src/utils/: dict.rs  extendint.rs  mod.rs
